# fastfall_SDL

./: .cmake-kits.json  .gitignore  .vimspector.json  CMakeLists.txt  CMakeSettings.json  EmptyState.hpp  data.pack  emscripten_instructions.txt  engine_current_features.txt  ff_plan.txt  imgui.ini  main.cpp  render_doc_settings.cap  todo.txt  vcpkg.json
fastfall/: CMakeLists.txt  main.cpp
fastfall/include/ext/: plf_colony.h
fastfall/include/fastfall/: fastfall.hpp  render.hpp
fastfall/include/fastfall/engine/: Engine.hpp  EngineRunnable.hpp  InputConfig.hpp  InputState.hpp  audio.hpp  config.hpp  input.hpp
fastfall/include/fastfall/game/: Actor.hpp  ActorSystem.hpp  ActorType.hpp  AnyID.hpp  AttachSystem.hpp  CameraSystem.hpp  CollidableSystem.hpp  CollisionManager.hpp  CollisionSystem.hpp  ComponentID.hpp  ComponentList.hpp  EmitterSystem.hpp  Entity.hpp  GameCamera.hpp  GameContext.hpp  GameObjectManager.hpp  ID.hpp  Instance.hpp  InstanceID.hpp  InstanceInterface.hpp  InstanceObserver.hpp  Level.hpp  LevelSystem.hpp  ObjectSystem.hpp  PathSystem.hpp  SceneManager.hpp  SceneSystem.hpp  TriggerManager.hpp  TriggerSystem.hpp  World.hpp  WorldComponentConfig.hpp  WorldConfigComponents.hpp  WorldConfigSystems.hpp  WorldImGui.hpp  WorldState.hpp  WorldStateListener.hpp  WorldSystemConfig.hpp  id_ptr.hpp  imgui_component.hpp
fastfall/include/fastfall/game_v2/: CameraSystem.hpp  CollisionSystem.hpp  ObjectSystem.hpp  SceneSystem.hpp  TriggerSystem.hpp  World.hpp  id_ptr.hpp
fastfall/include/fastfall/render/: AnimatedSprite.hpp  ChunkVertexArray.hpp  Color.hpp  DebugDraw.hpp  Drawable.hpp  Font.hpp  RenderState.hpp  RenderTarget.hpp  Shader.hpp  ShapeCircle.hpp  ShapeLine.hpp  ShapeRectangle.hpp  Sprite.hpp  Text.hpp  Texture.hpp  TileArray.hpp  TileVertexArray.hpp  Transform.hpp  Vertex.hpp  VertexArray.hpp  View.hpp  Window.hpp  font.hpp  freetype.hpp  opengl.hpp
fastfall/include/fastfall/resource/: Asset.hpp  ResourceSubscriber.hpp  ResourceWatcher.hpp  Resources.hpp
fastfall/include/fastfall/schema/: math-flat.hpp  math.fbs  resource-flat.hpp  resource.fbs
fastfall/include/fastfall/util/: Angle.hpp  Line.hpp  PlotLine.hpp  Position.hpp  Rect.hpp  Vec2.hpp  base64.hpp  cardinal.hpp  commandable.hpp  copyable_uniq_ptr.hpp  direction.hpp  dmessage.hpp  enumerating_iterator.hpp  glm_types.hpp  grid_vector.hpp  id.hpp  id_map.hpp  interp.hpp  line_thru_grid.hpp  log.hpp  math.hpp  slot_array.hpp  slot_map.hpp  slot_vector.hpp  tag.hpp  xml.hpp
fastfall/render/: CMakeLists.txt
fastfall/render/include/fastfall/: render.hpp
fastfall/render/src/: Color.cpp  RenderTarget.cpp  ShapeCircle.cpp  ShapeLine.cpp  ShapeRectangle.cpp  Sprite.cpp  Texture.cpp  Transformable.cpp  View.cpp  Window.cpp  render.cpp
fastfall/render/src/detail/: error.cpp
fastfall/src/: CMakeLists.txt  fastfall.cpp  user_types.cpp
fastfall/src/engine/: CMakeLists.txt  Engine.cpp  EngineRunnable.cpp  GamepadInput.cpp  ImGuiFrame.cpp  InputConfig.cpp  audio.cpp
fastfall/src/engine/imgui/: ImGuiContent.cpp  ImGuiFrame.cpp
fastfall/src/engine/input/: Gamepad.hpp  GamepadInput.cpp  Input.cpp  InputConfig.cpp  InputHandle.cpp  InputRecord.cpp  InputSource.cpp  InputSourceRealtime.cpp  InputSourceRecord.cpp  (+3 more)
fastfall/src/game/: ActorSystem.cpp  AttachSystem.cpp  CMakeLists.txt  CameraSystem.cpp  CollidableSystem.cpp  CollisionManager.cpp  CollisionSystem.cpp  ComponentID.cpp  ComponentList.cpp  EmitterSystem.cpp  GameCamera.cpp  GameContext.cpp  GameObjectManager.cpp  Instance.cpp  InstanceInterface.cpp  InstanceObserver.cpp  Level.cpp  LevelSystem.cpp  ObjectSystem.cpp  PathSystem.cpp  SceneManager.cpp  SceneSystem.cpp  TriggerManager.cpp  TriggerSystem.cpp  World.cpp  WorldImGui.cpp  WorldState.cpp  imgui_component.cpp
fastfall/src/game_v2/: CameraSystem.cpp  CollisionSystem.cpp  SceneSystem.cpp  TriggerSystem.cpp  World.cpp
fastfall/src/render/: AnimatedSprite.cpp  CMakeLists.txt  ChunkVertexArray.cpp  Color.cpp  DebugDraw.cpp  Font.cpp  RenderState.cpp  RenderTarget.cpp  RenderTexture.cpp  Shader.cpp  ShapeCircle.cpp  ShapeLine.cpp  ShapeRectangle.cpp  Sprite.cpp  Text.cpp  Texture.cpp  TileArray.cpp  TileVertexArray.cpp  Transform.cpp  Transformable.cpp  VertexArray.cpp  View.cpp  Window.cpp  freetype.cpp  render.cpp
fastfall/src/resource/: Asset.cpp  CMakeLists.txt  ResourceSubscriber.cpp  ResourceWatcher.cpp  Resources.cpp
fastfall/src/util/: Angle.cpp  CMakeLists.txt  base64.cpp  dmessage.cpp  log.cpp  tag.cpp  xml.cpp
fastfall/test/: CMakeLists.txt
fastfall/test/audio/: audio_system.cpp
fastfall/test/engine/: input.cpp  inputstate.cpp  statehandler.cpp
fastfall/test/particle/: ParticleRenderer.cpp  ParticleRenderer.hpp  particle.cpp
fastfall/test/phys/: TestPhysRenderer.cpp  TestPhysRenderer.hpp  colliderghost.cpp  collision.cpp  collisionsolver.cpp  ghostedge.cpp  path_follow.cpp  surfacetracker.cpp
fastfall/test/phys2/: fixed.cpp
fastfall/test/util/: grid_vector.test.cpp
fastfall/test/utils/: copyable-unique.cpp  dmessage.cpp  grid-vector.cpp
fastfall/util/: CMakeLists.txt
fastfall/util/src/: base64.cpp  cardinal.cpp  log.cpp  xml.cpp
fastfall_SDL/: CMakeLists.txt  main.cpp
fastfall_SDL/render/: CMakeLists.txt  Color.cpp  Primitives.hpp  RenderState.cpp  RenderState.hpp  RenderTarget.cpp  RenderTarget.hpp  RenderTexture.cpp  Shader.cpp  Shader.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp  Transformable.cpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  View.cpp  Window.cpp  Window.hpp  render.cpp  render.hpp
fastfall_SDL/render/detail/: error.cpp  error.hpp
fastfall_SDL/render/shapes/: ShapeCircle.cpp  ShapeCircle.hpp  ShapeLine.cpp  ShapeLine.hpp  ShapeRectangle.cpp  ShapeRectangle.hpp
fastfall_SDL/render/src/: RenderState.cpp  RenderTexture.cpp  Shader.cpp  ShapeLine.cpp  ShapeRectangle.cpp  Transform.cpp  Transformable.cpp  VertexArray.cpp  View.cpp  render.cpp
fastfall_SDL/util/: Rect.hpp
test/: CMakeLists.txt
test/core/: test_clock.cpp
test/util/: grid-vector.cpp  test_copyable_unique_ptr.cpp
(+666 files in other folders)
